exports[`prefer-string-repeat > invalid(1): <Component attribute={\"   \"} /> 1`] = `

  1 | <Component attribute={"   "} />

`;

exports[`prefer-string-repeat > invalid(1): <Component attribute={\"   \"} /> 2`] = `

Message:
> 1 | <Component attribute={"   "} />
    |                       ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | <Component attribute={' '.repeat(3)} />

`;

exports[`prefer-string-repeat > invalid(1): class Class { [\"   \"] = 1 } 1`] = `

  1 | class Class { ["   "] = 1 }

`;

exports[`prefer-string-repeat > invalid(1): class Class { [\"   \"] = 1 } 2`] = `

Message:
> 1 | class Class { ["   "] = 1 }
    |                ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | class Class { [' '.repeat(3)] = 1 }

`;

exports[`prefer-string-repeat > invalid(1): const string = \"   \"; 1`] = `

  1 | const string = "   ";

`;

exports[`prefer-string-repeat > invalid(1): const string = \"   \"; 2`] = `

Message:
> 1 | const string = "   ";
    |                ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = ' '.repeat(3);

`;

exports[`prefer-string-repeat > invalid(1): const string = \"  \"; // minimumRepetitions: 2 1`] = `

Options:
- minimumRepetitions: 2

Code:
  1 | const string = "  "; // minimumRepetitions: 2

`;

exports[`prefer-string-repeat > invalid(1): const string = \"  \"; // minimumRepetitions: 2 2`] = `

Message:
> 1 | const string = "  "; // minimumRepetitions: 2
    |                ^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = ' '.repeat(2); // minimumRepetitions: 2

`;

exports[`prefer-string-repeat > invalid(10): const string = \"\\uFEFF\\uFEFF\\uFEFF\"; 1`] = `

  1 | const string = "\\uFEFF\\uFEFF\\uFEFF";

`;

exports[`prefer-string-repeat > invalid(10): const string = \"\\uFEFF\\uFEFF\\uFEFF\"; 2`] = `

Message:
> 1 | const string = "\\uFEFF\\uFEFF\\uFEFF";
    |                ^^^^^^^^^^^^^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\u{FEFF}'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(11): const string = \`   \`; 1`] = `

  1 | const string = \`   \`;

`;

exports[`prefer-string-repeat > invalid(11): const string = \`   \`; 2`] = `

Message:
> 1 | const string = \`   \`;
    |                ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = ' '.repeat(3);

`;

exports[`prefer-string-repeat > invalid(12): const string = \`\\t\\t\\t\`; 1`] = `

  1 | const string = \`\\t\\t\\t\`;

`;

exports[`prefer-string-repeat > invalid(12): const string = \`\\t\\t\\t\`; 2`] = `

Message:
> 1 | const string = \`\\t\\t\\t\`;
    |                ^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\t'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(13): function foo() {return\"   \"} 1`] = `

  1 | function foo() {return"   "}

`;

exports[`prefer-string-repeat > invalid(13): function foo() {return\"   \"} 2`] = `

Message:
> 1 | function foo() {return"   "}
    |                       ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | function foo() {return ' '.repeat(3)}

`;

exports[`prefer-string-repeat > invalid(14): foo(); \"   \"; 1`] = `

  1 | foo(); "   ";

`;

exports[`prefer-string-repeat > invalid(14): foo(); \"   \"; 2`] = `

Message:
> 1 | foo(); "   ";
    |        ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | foo(); ' '.repeat(3);

`;

exports[`prefer-string-repeat > invalid(15): const object = {[\"   \"]: value}; 1`] = `

  1 | const object = {["   "]: value};

`;

exports[`prefer-string-repeat > invalid(15): const object = {[\"   \"]: value}; 2`] = `

Message:
> 1 | const object = {["   "]: value};
    |                  ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const object = {[' '.repeat(3)]: value};

`;

exports[`prefer-string-repeat > invalid(2): class Class { [\"   \"]() {} } 1`] = `

  1 | class Class { ["   "]() {} }

`;

exports[`prefer-string-repeat > invalid(2): class Class { [\"   \"]() {} } 2`] = `

Message:
> 1 | class Class { ["   "]() {} }
    |                ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | class Class { [' '.repeat(3)]() {} }

`;

exports[`prefer-string-repeat > invalid(2): const string = \"    \"; // minimumRepetitions: 4 1`] = `

Options:
- minimumRepetitions: 4

Code:
  1 | const string = "    "; // minimumRepetitions: 4

`;

exports[`prefer-string-repeat > invalid(2): const string = \"    \"; // minimumRepetitions: 4 2`] = `

Message:
> 1 | const string = "    "; // minimumRepetitions: 4
    |                ^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = ' '.repeat(4); // minimumRepetitions: 4

`;

exports[`prefer-string-repeat > invalid(2): const string = \"    \"; 1`] = `

  1 | const string = "    ";

`;

exports[`prefer-string-repeat > invalid(2): const string = \"    \"; 2`] = `

Message:
> 1 | const string = "    ";
    |                ^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = ' '.repeat(4);

`;

exports[`prefer-string-repeat > invalid(3): class Class { accessor [\"   \"] = 1 } 1`] = `

  1 | class Class { accessor ["   "] = 1 }

`;

exports[`prefer-string-repeat > invalid(3): class Class { accessor [\"   \"] = 1 } 2`] = `

Message:
> 1 | class Class { accessor ["   "] = 1 }
    |                         ^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | class Class { accessor [' '.repeat(3)] = 1 }

`;

exports[`prefer-string-repeat > invalid(3): const string = \"\\t\\t\\t\"; 1`] = `

  1 | const string = "\\t\\t\\t";

`;

exports[`prefer-string-repeat > invalid(3): const string = \"\\t\\t\\t\"; 2`] = `

Message:
> 1 | const string = "\\t\\t\\t";
    |                ^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\t'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(4): const string = \"\\n\\n\\n\"; 1`] = `

  1 | const string = "\\n\\n\\n";

`;

exports[`prefer-string-repeat > invalid(4): const string = \"\\n\\n\\n\"; 2`] = `

Message:
> 1 | const string = "\\n\\n\\n";
    |                ^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\n'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(5): const string = \"\\r\\r\\r\"; 1`] = `

  1 | const string = "\\r\\r\\r";

`;

exports[`prefer-string-repeat > invalid(5): const string = \"\\r\\r\\r\"; 2`] = `

Message:
> 1 | const string = "\\r\\r\\r";
    |                ^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\r'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(6): const string = \"\\v\\v\\v\"; 1`] = `

  1 | const string = "\\v\\v\\v";

`;

exports[`prefer-string-repeat > invalid(6): const string = \"\\v\\v\\v\"; 2`] = `

Message:
> 1 | const string = "\\v\\v\\v";
    |                ^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\u{B}'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(7): const string = \"\\f\\f\\f\"; 1`] = `

  1 | const string = "\\f\\f\\f";

`;

exports[`prefer-string-repeat > invalid(7): const string = \"\\f\\f\\f\"; 2`] = `

Message:
> 1 | const string = "\\f\\f\\f";
    |                ^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\f'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(8): const string = \"\\u00A0\\u00A0\\u00A0\"; 1`] = `

  1 | const string = "\\u00A0\\u00A0\\u00A0";

`;

exports[`prefer-string-repeat > invalid(8): const string = \"\\u00A0\\u00A0\\u00A0\"; 2`] = `

Message:
> 1 | const string = "\\u00A0\\u00A0\\u00A0";
    |                ^^^^^^^^^^^^^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\u{A0}'.repeat(3);

`;

exports[`prefer-string-repeat > invalid(9): const string = \"\\u2003\\u2003\\u2003\"; 1`] = `

  1 | const string = "\\u2003\\u2003\\u2003";

`;

exports[`prefer-string-repeat > invalid(9): const string = \"\\u2003\\u2003\\u2003\"; 2`] = `

Message:
> 1 | const string = "\\u2003\\u2003\\u2003";
    |                ^^^^^^^^^^^^^^^^^^^^ Use \`String#repeat()\` for repeated whitespace.

Output:
  1 | const string = '\\u{2003}'.repeat(3);

`;
